# princhess

./: '  .dockerignore  .gitignore  CLAUDE.md  CONVENTIONS.md  Cargo.toml  DEVELOPMENT_NOTES.md  LICENSE.goober  Makefile  README.md  build.rs  bulk_build.sh  docker-compose.yml  feature_list.txt  model  policy_model
.github/workflows/: build.yml  docker.yml  games.yml  release.yml
arena/: Cargo.toml
crates/princhess-train/: Cargo.toml
crates/princhess-train/src/: activation.rs  analysis_utils.rs  args.rs  data.rs  lib.rs  nets.rs  policy.rs  system.rs  tui.rs  value.rs
crates/princhess-train/src/neural/: activation.rs  core.rs  initialization.rs  layers.rs  lr_scheduler.rs  matrix.rs  mod.rs  optimizer.rs  vector.rs
engine/: Cargo.toml
engine/src/: main.rs  search.rs  training.rs  uci.rs
mcts/: Cargo.toml
mcts/src/: lib.rs
princhess-training/: Cargo.toml
princhess-training/src/train/: data.rs
resources/: fens.txt
scripts/: bench.sh  generate-args.sh  generate-tuning-config.sh  resume-test.sh  resume-tune.sh  start-test.sh  start-tune.sh
src/: arena.rs  args.rs  bench.rs  build.rs  chess.rs  engine.rs  evaluation.rs  features.rs  features_common.rs  graph.rs  lib.rs  main.rs  math.rs  mcts.rs  mem.rs  move_index.rs  nets.rs  nn.rs  numerics.rs  options.rs  policy.rs  policy_features.rs  quantized_policy.rs  quantized_value.rs  search.rs  search_tree.rs  simd.rs  state.rs  subnets.rs  tablebase.rs  threadpool.rs  time_management.rs  training.rs  transposition_table.rs  tree_policy.rs  uci.rs  value.rs
src/chess/: attacks.rs  bitboard.rs  board.rs  castling.rs  color.rs  magic.rs  mod.rs  movegen.rs  mv.rs  piece.rs  square.rs  zobrist.rs
src/from_model/: hidden_bias  hidden_weights  output_weights
src/model/: hidden1_bias  hidden1_weights  hidden2_bias  hidden2_weights  hidden_bias  hidden_bias_0  hidden_weights  hidden_weights_0  output_bias  output_weights
src/policy/: add_bias  constant_bias  hidden_bias  hidden_bias_1  hidden_weights  hidden_weights_1  left_bias  output_weights  right_bias
src/tablebase/: bindings.rs  mod.rs
src/to_model/: hidden_bias  hidden_weights  output_weights
src/train/: activation.rs  data.rs  mod.rs  policy.rs  state.rs  value.rs
src/value/: hidden_bias  output_bias  output_weights
train/: README.md  export_model.py  generate_data.sh  policy_training.py  prepare_data.py  prepare_data.sh  requirements.txt  setup.sh  tags  training.py
train/pgn/: extract_pgns.sh
