[package]
authors = ["Princess Lana <ianagbip1oti@gmail.com>"]
name = "princhess"
description = "A UCI compatible chess engine using MCTS search aimed at running on the CPU"
version = "0.0.0-dev"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/princesslana/princhess"
keywords = ["chess", "uci", "mcts"]
categories = ["games"]

[[bin]]
name = "princhess"
path = "src/main.rs"

[dependencies]
arc-swap = "=1.6.0"
arrayvec = "=0.7.4"
bytemuck = { version = "=1.17.1", features = ["derive", "extern_crate_alloc", "min_const_generics"] }
fastapprox = "=0.3.1"
goober = { git = "https://github.com/jw1912/goober/", rev = "32b9b52" }
nohash-hasher = "=0.2.0"
memmap = "=0.7.0"
scc = "=2.1.16"
scoped_threadpool = "=0.1.9"

[features]
default = ["policy-net", "value-net"]
policy-net = []
value-net = []

[build-dependencies]
bindgen = "=0.69.1"
cc = "=1.0.83"

[profile.release]
lto = true
strip = "debuginfo"
