[package]
name = "princhess"
version = "0.0.0-dev"
authors = ["Princess Lana <ianagbip1oti@gmail.com>"]
categories = ["games"]
edition = "2021"
keywords = ["chess", "uci", "mcts"]
license = "GPL-3.0"
repository = "https://github.com/princesslana/princhess"
description = "A UCI compatible chess engine using MCTS search aimed at running on the CPU"

[[bin]]
name = "princhess"
path = "src/main.rs"

[workspace]
members = [".", "crates/princhess-train"]
default-members = [".", "crates/princhess-train"]

[workspace.dependencies]
arrayvec = "=0.7.6"
princhess = { version = "0.0.0-dev", path = "." }

[workspace.dependencies.bytemuck]
version = "=1.21.0"
features = [
    "derive",
    "extern_crate_alloc",
    "min_const_generics",
    "must_cast",
]

[dependencies]
arrayvec = { workspace = true }
bytemuck = { workspace = true }
fastapprox = "=0.3.1"
nohash-hasher = "=0.2.0"
scc = "=2.3.0"

[features]
default = ["policy-net", "value-net", "fathom"]
policy-net = []
value-net = []
fathom = []

[build-dependencies]
bindgen = "=0.69.1"
cc = "=1.0.83"

[profile.release]
lto = true
debug = true
